In this commit is fixing the class of seed #852